@@ -1,3 +1,7 @@
+2012-12-31  Charles Turner  <chturne@gmail.com>
+
+	* Keyword.java: Re-formatted. Added more documentation.
+
 2012-12-29  Per Bothner  <per@bothner.com>
 
 	* ClassExp.java (compileMembers): Don't generate field for a get/set
